k8s/common/common-mssql.yml
apiVersion: v1
kind: Service
metadata:
  name: common-mssql-service
spec:
  ports:
    - protocol: TCP
      port: 1433
  selector:
    app: common-mssql
  clusterIP: None
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: common-mssql-statefulset
spec:
  selector:
    matchLabels:
      app: common-mssql
  serviceName: common-mssql-service
  replicas: 1
  template:
    metadata:
      labels:
        app: common-mssql
    spec:
      terminationGracePeriodSeconds: 30
      hostname: mssqlinst
      securityContext:
        fsGroup: 10001
      containers:
        - name: common-mssql
          image: mcr.microsoft.com/mssql/server:2019-latest
          ports:
            - containerPort: 1433
          volumeMounts:
            - name: common-mssql-vol
              mountPath: /var/opt/mssql
      volumes:
        - name: common-mssql-vol
          persistentVolumeClaim:
            claimName: common-mssql-pvc
