k8s/common/common-pgsql.yml
apiVersion: v1
kind: Service
metadata:
  name: common-pgsql-service
spec:
  ports:
    - protocol: TCP
      port: 5432
  selector:
    app: common-pgsql
  clusterIP: None
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: common-pgsql-statefulset
spec:
  selector:
    matchLabels:
      app: common-pgsql
  serviceName: common-pgsql-service
  replicas: 1
  template:
    metadata:
      labels:
        app: common-pgsql
    spec:
      terminationGracePeriodSeconds: 30
      containers:
        - name: common-pgsql
          image: postgres:14-alpine
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: common-pgsql-vol
              mountPath: /var/lib/postgresql/data
          resources:
            requests:
              memory: 256M
            limits:
              memory: 512M
      volumes:
        - name: common-pgsql-vol
          persistentVolumeClaim:
            claimName: common-pgsql-pvc
