k8s/common/common-telemetry.yml
apiVersion: v1
kind: Service
metadata:
  name: common-telemetry-collector-service
spec:
  selector:
    app: common-telemetry-collector
  ports:
    - port: 4317
      protocol: TCP
      targetPort: 4317
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: common-telemetry-collector-deployment
  labels:
    app: common-telemetry-collector
spec:
  replicas: 1
  selector:
    matchLabels:
      app: common-telemetry-collector
  template:
    metadata:
      labels:
        app: common-telemetry-collector
    spec:
      containers:
        - name: common-telemetry-collector
          image: ghcr.io/jordansimsmith/telemetry-collector:d3d72b16b1f434ce3b0098cbf6afdf537440f82b
          ports:
            - containerPort: 4317
          resources:
            requests:
              memory: 128M
            limits:
              memory: 256M
      imagePullSecrets:
        - name: docker-github-secret
