k8s/common/common-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: common-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    cert-manager.io/cluster-issuer: common-letsencrypt-production-issuer
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-buffer-size: "128k"

spec:
  tls:
    - hosts:
        - jordansimsmith.com
        - football-subscriber.jordansimsmith.com
        - api.football-subscriber.jordansimsmith.com
        - price-tracker.jordansimsmith.com
        - archie.jordansimsmith.com
        - api.archie.jordansimsmith.com
        - immersion-tracker.jordansimsmith.com
      secretName: common-ingress-tls-secret

  rules:
    - host: jordansimsmith.com
      http:
        paths:
          - path: /(.*)
            pathType: Prefix
            backend:
              service:
                name: personal-website-service
                port:
                  number: 80

    - host: football-subscriber.jordansimsmith.com
      http:
        paths:
          - path: /(.*)
            pathType: Prefix
            backend:
              service:
                name: football-subscriber-client-service
                port:
                  number: 3000

    - host: api.football-subscriber.jordansimsmith.com
      http:
        paths:
          - path: /(.*)
            pathType: Prefix
            backend:
              service:
                name: football-subscriber-server-service
                port:
                  number: 80

    - host: price-tracker.jordansimsmith.com
      http:
        paths:
          - path: /(.*)
            pathType: Prefix
            backend:
              service:
                name: price-tracker-server-service
                port:
                  number: 80

    - host: archie.jordansimsmith.com
      http:
        paths:
          - path: /(.*)
            pathType: Prefix
            backend:
              service:
                name: archie-dashboard-app-service
                port:
                  number: 80

    - host: api.archie.jordansimsmith.com
      http:
        paths:
          - path: /(.*)
            pathType: Prefix
            backend:
              service:
                name: archie-dashboard-api-service
                port:
                  number: 80

    - host: immersion-tracker.jordansimsmith.com
      http:
        paths:
          - path: /(.*)
            pathType: Prefix
            backend:
              service:
                name: immersion-tracker-server-service
                port:
                  number: 8080
